tests/fixtures/pass/empty_array_typed.sc
let main(): i32 = {
  let empty: Array(i32, 0) = []
  42
}
